Removed desktop wrap margin to fix page height and width scroll problems

--- a/main.css
+++ b/main.css
@@ -55,12 +55,13 @@ body {
 .desktop {
     width: 100%;
     height: 100%;
-    padding: 10px;
 }
 
 .folder-wrap {
     width: 60px;
     position: absolute;
+    top: 20px;
+    left: 11px;
 }
 
 .folder-wrap:hover {
@@ -86,6 +87,7 @@ body {
     width: 60px;
     position: absolute;
     top: 100px;
+    left: 10px;
 }
 
 .trash-wrap:hover {
